--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "@prisma/client": "^4.9.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
-    "moment": "^2.29.4"
+    "zod": "^3.20.2"
   }
 }
